parser/expanded_grammar
MAIN → main { DECLARATIONS STATEMENTS }
DECLARATIONS → DECLARATION DECLARATIONS
DECLARATIONS → ε
DECLARATION → TYPE VARS ;
TYPE → int
TYPE → real
TYPE → boolean
VARS → id VARSX
VARSX → , VARS
VARSX → ε
STATEMENTS → STATEMENT STATEMENTS
STATEMENTS → ε
STATEMENT → IF_STMT
STATEMENT → WHILE_STMT
STATEMENT → READ_STMT
STATEMENT → PRINT_STMT
STATEMENT → BLOCK_STMT
STATEMENT → ASSIGN_STMT
ASSIGN_STMT → id = RELATIONAL_EXPRESSION
IF_STMT → if ( RELATIONAL_EXPRESSION ) BLOCK_STMT ELSE_STMT
ELSE_STMT → else CONDITIONAL_STMT
ELSE_STMT → ε
CONDITIONAL_STMT → IF_STMT
CONDITIONAL_STMT → BLOCK_STMT
CONDITIONAL_STMT → ε
WHILE_STMT → while ( RELATIONAL_EXPRESSION ) BLOCK_STMT
BLOCK_STMT → { STATEMENTS }
READ_STMT → read id ;
PRINT_STMT → print RELATIONAL_EXPRESSION ;
RELOP → >
RELOP → <
RELOP → >=
RELOP → <=
RELOP → ==
RELOP → !=
RELATIONAL_EXPRESSION → EXPRESSION RELATIONAL_EXPRESSIONX
RELATIONAL_EXPRESSIONX → RELOP EXPRESSION
RELATIONAL_EXPRESSIONX → ε
EXPRESSION → EXPRESSION ADDOP TERM
EXPRESSION → TERM
EXPRESSION → id INCOP
INCOP → ++
INCOP → --
ADDOP → +
ADDOP → -
TERM → TERM MULOP FACTOR
TERM → FACTOR
FACTOR → ( EXPRESSION )
FACTOR → id
MULOP → *
MULOP → /
MULOP → %
